Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-18683

uninitialized semaphore in client_fid_init()

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.17.0
    • None
    • None
    • 3
    • 9223372036854775807

      [   61.261315] ------------[ cut here ]------------
      [   61.261486] DEBUG_RWSEMS_WARN_ON(sem->magic != sem): count = 0x1, magic = 0x0, owner = 0xffff8c479ba28ac0, curr 0xffff8c479ba28ac0, list not empty
      [   61.269570] WARNING: CPU: 0 PID: 6005 at kernel/locking/rwsem.c:1368 up_write+0x141/0x1a0
      [   61.269699] Modules linked in: zfs(O) zunicode(O) zzstd(O) zlua(O) zcommon(O) znvpair(O) zavl(O) icp(O) spl(O) lustre(O) osp(O) ofd(O) lod(O) mdt(O) mdd(O) mgs(O) osd_ldiskfs(O) ldiskfs(O) lquota(O) lfsck(O) obdecho(O) mgc(O) mdc(O) lov(O) osc(O) lmv(O) fid(O) fld(O) ptlrpc(O) obdclass(O) ksocklnd(O) lnet(O) libcfs(O)
      [   61.269840] CPU: 0 PID: 6005 Comm: mount.lustre Tainted: G        W  O     --------- -  - 4.18.0 #11
      [   61.269884] Hardware name: QEMU Standard PC (i440FX + PIIX, 1996), BIOS 1.16.3-1.fc39 04/01/2014
      [   61.269927] RIP: 0010:up_write+0x141/0x1a0
      [   61.269951] Code: 32 e2 b4 48 39 c2 48 c7 c2 e0 31 e2 b4 48 c7 c0 11 98 e3 b4 48 0f 45 c2 48 8b 13 65 4c 8b 0c 25 c0 ce 01 00 50 e8 85 46 fb ff <0f> 0b 5e eb 8a 48 8b 43 08 48 8d 53 08 c6 05 58 92 44 01 01 48 c7
      [   61.270049] RSP: 0018:ffff8c479c667c40 EFLAGS: 00010286
      [   61.270078] RAX: 0000000000000086 RBX: ffff8c479c3f99d8 RCX: 0000000000000001
      [   61.270116] RDX: 0000000080000001 RSI: ffffffffb4e39811 RDI: 00000000ffffffff
      [   61.270154] RBP: ffff8c4741a2a240 R08: 0000000000000000 R09: 0000000000000000
      [   61.270190] R10: ffff8c479c667a88 R11: ffff8c479c667a80 R12: ffff8c479c3f99d8
      [   61.270227] R13: ffff8c4794f2f000 R14: 0000000000000001 R15: ffff8c4792144b40
      [   61.270264] FS:  00007f104ed858c0(0000) GS:ffff8c4833800000(0000) knlGS:0000000000000000
      [   61.270302] CS:  0010 DS: 0000 ES: 0000 CR0: 0000000080050033
      [   61.270333] CR2: 00005602fd329fa0 CR3: 000000015c432000 CR4: 0000000000350eb0
      [   61.270371] Call Trace:
      [   61.270407]  client_fid_init+0x163/0x540 [fid]
      [   61.270441]  ll_fill_super+0x160f/0x6c40 [lustre]
      [   61.270505]  ? flush_workqueue+0x17c/0x460
      [   61.270532]  ? obd_zombie_barrier+0x31/0x90 [obdclass]
      [   61.270617]  ? lustre_fill_super+0xf5/0x480 [lustre]
      [   61.270679]  lustre_fill_super+0xf5/0x480 [lustre]
      [   61.270740]  ? lustre_mount+0x10/0x10 [lustre]
      [   61.270799]  mount_nodev+0x41/0x90
      [   61.270825]  legacy_get_tree+0x28/0x50
      [   61.270849]  vfs_get_tree+0x18/0x90
      [   61.270872]  ? ns_capable_common+0x26/0x40
      [   61.270896]  do_mount+0x80b/0x9e0
      [   61.270922]  ksys_mount+0xb1/0xd0
      [   61.270945]  __x64_sys_mount+0x1c/0x20
      [   61.270968]  do_syscall_64+0x4b/0x1b0
      

            wc-triage WC Triage
            bzzz Alex Zhuravlev
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: